# cppscapy

./: .env  .gitignore  API_REFERENCE.md  CMakeLists.txt  COMPILE_TIME_LENGTH_DEDUCTION.md  PROTOCOL_EXPANSION.md  README.md  generated_headers_demo  header_dsl_demo  invalid|output.h  protocol_showcase  pseudo_header_simple  requirements.txt
docs/: HEADERS_QUICK_REF.md  HEADER_DSL.md  NETWORK_HEADERS.md  PCAP_SUPPORT.md  README.md  XML_VS_HDL_FORMATS.md  unicode-symbols-guide.md
examples/: auto_hex_test.cpp  checksum_methods_test.cpp  constexpr_test.cpp  converted_from_hdl.xml  demo.cpp  generated_headers_demo.cpp  header_dsl_demo.cpp  incremental_pattern_test.cpp  inplace_randomization_test.cpp  ipv4_checksum_test.cpp  length_deduction_demo.cpp  move_semantics_test.cpp  mpls_test.cpp  network_protocols.h  network_protocols.hdl  network_protocols.xsd  network_protocols_converted.hdl  pcap_demo.cpp  performance_comparison.cpp  protocol_showcase.cpp  pseudo_header_simple.cpp  quick_deduction_example.cpp  quick_inplace_demo.cpp  quick_random_examples.cpp  quick_usage.cpp  random_payload_test.cpp  simple_move_demo.cpp  simple_pcap_example.cpp  simple_test.cpp  string_literal_test.cpp  templated_lambda_test.cpp  udp_checksum_demo.cpp  utils_test.cpp  why_pseudo_header.cpp
include/: generated_headers.h  header_dsl.h  network_headers.h  pcap_support.h  utils.h
python-package/: LICENSE  MANIFEST.in  README.md  build.sh  dev-setup.sh  requirements.txt  setup.py
python-package/cppscapy/: __init__.py  format_converter.py  hdl_compiler.py
python-package/cppscapy_hdl_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python-package/examples/: network_protocols.hdl  network_protocols.xml
python-package/tests/: __init__.py  test_compiler.py
src/: CMakeLists.txt  network_headers.cpp  pcap_support.cpp  tcp_udp_icmp.cpp  udp_checksum.cpp  utils.cpp
tools/: README.md  format_converter.py  hdl_compiler.py
